nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sf
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.1-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: "/etc/nginx"
          readOnly: true
        - name: userpass
          mountPath: "/etc/nginx/htpasswd"
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: nginx-config
            items:
            - key: nginx.conf
              path: nginx.conf
        - name: userpass
          secret:
            secretName: auth-basic
