service.yml
apiVersion: v1
kind: Service
metadata:
  name: sf-webserver
spec:
  #type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30007
