ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sf-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sf-nginx.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sf-webserver
                port:
                  number: 80
